$Id$

2.0.7-pre-1
	Owl should build now without zephyr, enabling it to act as a
	  standalone AIM client.
	Cleaned up some warnings from linux gcc.
	Fixed bug that can cause response stuff to crash
	
2.0.6
	aimlogin will now accept the screenname without a password and ask
	   for the password such that it is not echo'd to the terminal
	'addbuddy aim' and 'delbuddy aim' now work
	Bug fix to make zwrite -m work with -c/-i
	Fixed documentation bug in aimwrite
	Initialze $owl::auth
	Fix in autoconf for des425
	Reformatted editwin.c and added capability of doing password-style
	   echoing
	
2.0.5
	Fix in finding des for building zcrypt
	Fixed description for alert_action variable
	More detailed usage from -h
	Special cased replies for webzephyr users on classes and
	  login notifications for webzephyr users
	Fixed bug that caused a crash on zpunt with '*' for an instance
	AIM logout and then login now works.
	Fixed bug causing view -d not to work.
	Added hostname and tty name to LOGIN/LOGOUT zephyrs on oneline
	  style
	
2.0.4
	Made command line option -n actually work
	Implemented styles, including the 'default' 'basic' and 'oneline'
	  styles.  A 'perl' style is available if a format_msg() function
	  is found in .owlconf
	Added the 'default_style' variable
	Added the 'toggle-oneline' command
	The 'o' key is bound to 'toggle-oneline'
	Internally, the one view now has a name, 'main', and message
	  recalcuations are done in place when its filter is changed.
	Added filter field 'login' which can take the values 'login'
	   'logout' or 'none'
	Added the perl variable $owl::login, just as above
	Updated the 'login' and 'trash' filters appropriately
	Fix for checking for DES in build system
	Bug fix in using makemsg when no curses window is present
	The variable $owl::auth now exists in perl
	Use new internal function to delete zephyr subs from file
	New 'sepbar_disable' variable can turn off sepbar info display
	Updated contributor info
	Added the 'show view' command