@@ -322,6 +322,11 @@ int main(int argc, char **argv, char **env) {
     if (owl_global_is_aimloggedin(&g)) {
       owl_function_debugmsg("Doing aim processing");
       owl_aim_process_events();
+
+      if (owl_timer_is_expired(owl_global_get_aim_buddyinfo_timer(&g))) {
+	owl_buddylist_request_idletimes(owl_global_get_buddylist(&g));
+	owl_timer_reset(owl_global_get_aim_buddyinfo_timer(&g));
+      }
     }
 
     /* little hack */
