@@ -5,6 +5,7 @@ $Id$
 	  standalone AIM client.
 	Cleaned up some warnings from linux gcc.
 	Fixed bug that can cause response stuff to crash
+	Idletimes now appear in the buddylisting
 	
 2.0.6
 	aimlogin will now accept the screenname without a password and ask
